fix: tile bleeding and css background color

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #306850;
+  background-color: #081820;
 }
